[package]
name = "remote_shutdown"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.6.2"
slint = "1.0.2"
system_shutdown = "4.0.1"
tray-item = "0.8.0"

[build-dependencies]
windres = "*"
